Add ( to end of line 75, add state_to_subset value

--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -72,12 +72,13 @@ long_subset <- convert_data_wide_to_long(
 ```{r tallied-subset}
 # tally up the numbers of cities and counties in the state that have mobility
 # data available
-tallied_subset <- subset_by_city_county
-  file_name_in = paste0("output/subsetted_states_wide/",
+tallied_subset <- subset_by_city_county(
+  input_file_name = paste0("output/subsetted_states_wide/",
                  core_name,
                  "_",
                  state_no_spaces,
-                 ".csv")
+                 ".csv"),
+  state_to_subset = state_to_analyze)
 ```
 
 ## Figures
